--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="stylesheet" href="./style.css" />
     <title>Zalazar Fix</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <h1>Zalazar Fix</h1>
+      <p class="subtitle">Zalazar + IA</p>
+      <div class="grid">
+        <button class="tile">✨<br>Quitar filtro</button>
+        <button class="tile">🎞️<br>Revelar negativos</button>
+        <button class="tile">🧑‍🎨<br>Restaurar foto dañada</button>
+        <button class="tile">🎨<br>Colorear B/N</button>
+        <button class="tile">🤳<br>Mejorar rostro</button>
+        <button class="tile">📸<br>Estilo vintage</button>
+      </div>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
