Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <p>Vista previa:</p>
         <img id="previewImage" src="" alt="Vista previa" />
       </div>
+
+      <div id="resultContainer" class="preview-container" style="display:none;">
+        <p>Resultado sin filtro:</p>
+        <canvas id="resultCanvas"></canvas>
+        <a id="downloadBtn" class="tile" download="fixora-result.png" href="#">Descargar</a>
+      </div>
     </div>
 
     <script src="./main.js"></script>
