Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,12 +14,12 @@
     <p class="subtitle">Edición inteligente para tus fotos</p>
 
     <div class="grid">
-      <button class="tile" onclick="applyFix('quitarFiltro')">✨<br>Quitar filtro</button>
-      <button class="tile" onclick="alert('Función \"revelar negativos\" aún no está activa')">📼<br>Revelar negativos</button>
-      <button class="tile" onclick="alert('Función \"restaurar\" aún no está activa')">🧑‍🎨<br>Restaurar foto dañada</button>
-      <button class="tile" onclick="alert('Función \"colorear\" aún no está activa')">🎨<br>Colorear B/N</button>
-      <button class="tile" onclick="alert('Función \"mejorar rostro\" aún no está activa')">💅<br>Mejorar rostro</button>
-      <button class="tile" onclick="alert('Función \"vintage\" aún no está activa')">📸<br>Estilo vintage</button>
+      <button class="tile">✨<br>Quitar filtro</button>
+      <button class="tile">📼<br>Revelar negativos</button>
+      <button class="tile">🧑‍🎨<br>Restaurar foto dañada</button>
+      <button class="tile">🎨<br>Colorear B/N</button>
+      <button class="tile">💅<br>Mejorar rostro</button>
+      <button class="tile">📸<br>Estilo vintage</button>
     </div>
 
     <input type="file" id="imageInput" accept="image/*" />
@@ -37,6 +36,6 @@
     </div>
   </div>
 
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
