Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
 
     <div class="grid">
       <button>
-        <img src="/zalazar-fix/assets/icons/clean.png" alt="Quitar filtro" />
+        <img src="/zalazar-fix/icons/clean.png" alt="Quitar filtro" />
         Quitar filtro
       </button>
       <button>
-        <img src="/zalazar-fix/assets/icons/film.png" alt="Revelar negativos" />
+        <img src="/zalazar-fix/icons/film.png" alt="Revelar negativos" />
         Revelar negativos
       </button>
       <button>
-        <img src="/zalazar-fix/assets/icons/restore.png" alt="Restaurar foto dañada" />
+        <img src="/zalazar-fix/icons/restore.png" alt="Restaurar foto dañada" />
         Restaurar foto dañada
       </button>
       <button>
-        <img src="/zalazar-fix/assets/icons/color.png" alt="Colorear B/N" />
+        <img src="/zalazar-fix/icons/color.png" alt="Colorear B/N" />
         Colorear B/N
       </button>
       <button>
-        <img src="/zalazar-fix/assets/icons/face.png" alt="Mejorar rostro" />
+        <img src="/zalazar-fix/icons/face.png" alt="Mejorar rostro" />
         Mejorar rostro
       </button>
       <button>
-        <img src="/zalazar-fix/assets/icons/vintage.png" alt="Estilo vintage" />
+        <img src="/zalazar-fix/icons/vintage.png" alt="Estilo vintage" />
         Estilo vintage
       </button>
     </div>
