--- a/index.html
+++ b/index.html
@@ -6,42 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
-        font-family: -apple-system, sans-serif;
+        font-family: sans-serif;
+        text-align: center;
         padding: 2rem;
         background: #fff;
-        text-align: center;
       }
-      input[type="file"],
-      input[type="text"],
+      input,
       button {
-        margin: 1rem 0;
-        padding: 0.6rem 1rem;
+        margin: 1rem;
+        padding: 0.7rem;
         font-size: 1rem;
       }
       canvas {
-        margin-top: 1rem;
         max-width: 100%;
+        margin-top: 1rem;
+        border: 1px solid #ccc;
       }
     </style>
   </head>
   <body>
     <h1>Fixora</h1>
-    <p>Quitá filtros de tus fotos con un solo toque</p>
+    <p>Quitar filtro con nombre personalizado</p>
 
     <input type="file" id="imageInput" accept="image/*" />
     <br />
     <input type="text" id="filterName" placeholder="Nombre del filtro (opcional)" />
     <br />
     <button onclick="removeFilter()">Quitar filtro</button>
-
+    <br />
     <canvas id="canvas"></canvas>
 
     <script>
       const imageInput = document.getElementById("imageInput");
-      const filterInput = document.getElementById("filterName");
       const canvas = document.getElementById("canvas");
       const ctx = canvas.getContext("2d");
-      let image = new Image();
+      const filterInput = document.getElementById("filterName");
+      let img = new Image();
 
       imageInput.addEventListener("change", (e) => {
         const file = e.target.files[0];
@@ -49,69 +49,52 @@
 
         const reader = new FileReader();
         reader.onload = function (event) {
-          image.onload = () => {
-            canvas.width = image.width;
-            canvas.height = image.height;
-            ctx.drawImage(image, 0, 0);
+          img.onload = () => {
+            canvas.width = img.width;
+            canvas.height = img.height;
+            ctx.drawImage(img, 0, 0);
           };
-          image.src = event.target.result;
+          img.src = event.target.result;
         };
         reader.readAsDataURL(file);
       });
 
       const filterPresets = {
-        // Instagram
-        heahmund: { brightness: 0.9, contrast: 0.85, saturation: 0.8 },
-        clarendon: { brightness: 0.95, contrast: 1.1, saturation: 1.2 },
-        juno: { brightness: 1.05, contrast: 1.15, saturation: 1.25 },
-
-        // VSCO
-        a4: { brightness: 0.92, contrast: 1.1, saturation: 0.9 },
-        m5: { brightness: 0.95, contrast: 1.05, saturation: 0.85 },
-
-        // Snapchat
-        vintage: { brightness: 1.1, contrast: 0.9, saturation: 0.6 },
-        glow: { brightness: 1.2, contrast: 1.1, saturation: 1.5 },
+        heahmund: { brightness: 0.9, contrast: 0.8, saturation: 0.75 },
+        clarendon: { brightness: 1.1, contrast: 1.2, saturation: 1.3 },
+        m5: { brightness: 0.95, contrast: 1.1, saturation: 0.9 },
+        vintage: { brightness: 1.1, contrast: 0.9, saturation: 0.7 },
       };
 
       function removeFilter() {
-        if (!image.src) return;
+        if (!img.src) return;
 
-        const filter = filterInput.value.toLowerCase().trim();
-        const preset = filterPresets[filter] || { brightness: 1, contrast: 1, saturation: 1 };
+        ctx.drawImage(img, 0, 0);
+        let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        let data = imageData.data;
 
-        // Dibujar imagen original
-        ctx.drawImage(image, 0, 0);
+        const name = filterInput.value.toLowerCase().trim();
+        const preset = filterPresets[name] || { brightness: 1, contrast: 1, saturation: 1 };
 
-        // Obtener imagen original
-        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        const data = imageData.data;
-
-        // Aplicar "quita filtro"
         for (let i = 0; i < data.length; i += 4) {
-          // Convertir a HSL para trabajar mejor con saturación (simulación básica)
           let r = data[i] / 255;
           let g = data[i + 1] / 255;
           let b = data[i + 2] / 255;
 
-          // Quitar saturación artificial (simplificada)
           const avg = (r + g + b) / 3;
 
           r = avg + (r - avg) * (1 / preset.saturation);
           g = avg + (g - avg) * (1 / preset.saturation);
           b = avg + (b - avg) * (1 / preset.saturation);
 
-          // Quitar contraste
           r = (r - 0.5) * (1 / preset.contrast) + 0.5;
           g = (g - 0.5) * (1 / preset.contrast) + 0.5;
           b = (b - 0.5) * (1 / preset.contrast) + 0.5;
 
-          // Quitar brillo
           r /= preset.brightness;
           g /= preset.brightness;
           b /= preset.brightness;
 
-          // Reconvertir a 0-255
           data[i] = Math.min(255, Math.max(0, r * 255));
           data[i + 1] = Math.min(255, Math.max(0, g * 255));
           data[i + 2] = Math.min(255, Math.max(0, b * 255));
