--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         font-family: sans-serif;
         text-align: center;
         padding: 2rem;
-        background: #fff;
       }
       input,
       button {
@@ -30,24 +29,23 @@
   </head>
   <body>
     <h1>Fixora</h1>
-    <p>Quitar filtro con nombre personalizado</p>
+    <p>Quitar filtro con IA (Replicate)</p>
 
     <input type="file" id="imageInput" accept="image/*" />
     <br />
-    <input type="text" id="filterName" placeholder="Nombre del filtro (opcional)" />
-    <br />
-    <button onclick="removeFilter()">Quitar filtro</button>
+    <button onclick="removeFilterWithIA()">Quitar filtro con IA</button>
     <button onclick="downloadImage()">Descargar imagen</button>
     <p id="status"></p>
     <canvas id="canvas"></canvas>
 
-    <script>
+    <script type="module">
       const imageInput = document.getElementById("imageInput");
       const canvas = document.getElementById("canvas");
       const ctx = canvas.getContext("2d");
-      const filterInput = document.getElementById("filterName");
       const status = document.getElementById("status");
-      let img = new Image();
+      let imgBase64 = "";
+
+      const REPLICATE_API_KEY = import.meta.env.VITE_REPLICATE_API_KEY;
 
       imageInput.addEventListener("change", (e) => {
         const file = e.target.files[0];
@@ -55,62 +53,80 @@
 
         const reader = new FileReader();
         reader.onload = function (event) {
+          imgBase64 = event.target.result;
+          const img = new Image();
           img.onload = () => {
             canvas.width = img.width;
             canvas.height = img.height;
             ctx.drawImage(img, 0, 0);
             status.textContent = "Imagen cargada.";
           };
-          img.src = event.target.result;
+          img.src = imgBase64;
         };
         reader.readAsDataURL(file);
       });
 
-      const filterPresets = {
-        heahmund: { brightness: 0.9, contrast: 0.8, saturation: 0.75 },
-        clarendon: { brightness: 1.1, contrast: 1.2, saturation: 1.3 },
-        m5: { brightness: 0.95, contrast: 1.1, saturation: 0.9 },
-        vintage: { brightness: 1.1, contrast: 0.9, saturation: 0.7 },
-      };
-
-      function removeFilter() {
-        if (!img.src) {
+      async function removeFilterWithIA() {
+        if (!imgBase64) {
           status.textContent = "Primero cargá una imagen.";
           return;
         }
 
-        ctx.drawImage(img, 0, 0);
-        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        const data = imageData.data;
+        status.textContent = "Procesando con IA...";
 
-        const name = filterInput.value.toLowerCase().trim();
-        const preset = filterPresets[name] || { brightness: 1, contrast: 1, saturation: 1 };
+        const response = await fetch(imgBase64);
+        const blob = await response.blob();
+        const formData = new FormData();
+        formData.append("file", blob, "image.png");
 
-        for (let i = 0; i < data.length; i += 4) {
-          let r = data[i] / 255;
-          let g = data[i + 1] / 255;
-          let b = data[i + 2] / 255;
+        const uploadRes = await fetch("https://api.imgbb.com/1/upload?key=76d1a6db71f8cbf63a82c69a8cd95fd2", {
+          method: "POST",
+          body: formData,
+        });
+        const uploadData = await uploadRes.json();
+        const imageURL = uploadData.data.url;
 
-          const avg = (r + g + b) / 3;
-          r = avg + (r - avg) * (1 / preset.saturation);
-          g = avg + (g - avg) * (1 / preset.saturation);
-          b = avg + (b - avg) * (1 / preset.saturation);
+        const replicateRes = await fetch("https://api.replicate.com/v1/predictions", {
+          method: "POST",
+          headers: {
+            Authorization: `Token ${REPLICATE_API_KEY}`,
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            version: "9286fbe6c552e7c87cfec830b560c60d21c56e4fa69f0f06f30e043e0f8d4f94",
+            input: { image: imageURL, scale: 2, face_enhance: false },
+          }),
+        });
 
-          r = (r - 0.5) * (1 / preset.contrast) + 0.5;
-          g = (g - 0.5) * (1 / preset.contrast) + 0.5;
-          b = (b - 0.5) * (1 / preset.contrast) + 0.5;
+        const replicateData = await replicateRes.json();
+        const predictionId = replicateData.id;
 
-          r /= preset.brightness;
-          g /= preset.brightness;
-          b /= preset.brightness;
-
-          data[i] = Math.min(255, Math.max(0, r * 255));
-          data[i + 1] = Math.min(255, Math.max(0, g * 255));
-          data[i + 2] = Math.min(255, Math.max(0, b * 255));
+        let outputUrl = "";
+        for (let i = 0; i < 30; i++) {
+          await new Promise((r) => setTimeout(r, 3000));
+          const pollRes = await fetch(`https://api.replicate.com/v1/predictions/${predictionId}`, {
+            headers: { Authorization: `Token ${REPLICATE_API_KEY}` },
+          });
+          const pollData = await pollRes.json();
+          if (pollData.status === "succeeded") {
+            outputUrl = pollData.output;
+            break;
+          }
         }
 
-        ctx.putImageData(imageData, 0, 0);
-        status.textContent = `Filtro "${name || 'personalizado'}" eliminado.`;
+        if (outputUrl) {
+          const finalImg = new Image();
+          finalImg.crossOrigin = "anonymous";
+          finalImg.onload = () => {
+            canvas.width = finalImg.width;
+            canvas.height = finalImg.height;
+            ctx.drawImage(finalImg, 0, 0);
+            status.textContent = "IA aplicada con éxito.";
+          };
+          finalImg.src = outputUrl;
+        } else {
+          status.textContent = "Error: no se pudo procesar la imagen con IA.";
+        }
       }
 
       function downloadImage() {
